[FEDIZ-130] - Got Jetty9 systests working

--- a/systests/jetty9/pom.xml
+++ b/systests/jetty9/pom.xml
@@ -245,6 +245,7 @@
                         </goals>
                         <configuration>
                             <skip>false</skip>
+                            <reuseForks>false</reuseForks>
                             <systemPropertyVariables>
                                 <wt.headless>true</wt.headless>
                                 <idp.https.port>${idp.https.port}</idp.https.port>
