--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -34,6 +34,7 @@
       <module>tests</module>
       <module>webapps</module>
       <module>jetty8</module>
+      <module>jetty9</module>
       <module>tomcat7</module>
       <module>tomcat8</module>
       <module>spring</module>
