[FEDIZ-131] Adding first 2 demos - they can be run with any JAX-RS impl with the minimum amount of updates

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -37,6 +37,8 @@
         <module>springWebapp</module>
         <module>spring2Webapp</module>
         <module>springPreauthWebapp</module>
+        <module>jaxrsSimpleWebapp</module>
+        <module>jaxrsSpringSecurityWebapp</module>
     </modules>
 	
 	<profiles>
