--- a/services/oidc/src/main/resources/rs.security.properties
+++ b/services/oidc/src/main/resources/rs.security.properties
@@ -15,11 +15,10 @@
 #    specific language governing permissions and limitations
 #    under the License.
 
-#rs.security.keystore.type=jks
-#rs.security.keystore.password=password
-#rs.security.keystore.alias=alice
-#rs.security.keystore.file=org/apache/cxf/systest/jaxrs/security/certs/alice.jks
+rs.security.keystore.type=jks
+rs.security.keystore.password=password
+rs.security.keystore.alias=alice
+rs.security.keystore.file=oidc.jks
 #rs.security.encryption.content.algorithm=A128GCM
 #rs.security.encryption.key.algorithm=RSA-OAEP
-#rs.security.signature.algorithm=RS256
-rs.security.signature.algorithm=none
+rs.security.signature.algorithm=RS256
