[FEDIZ-131] Completing the cxf plugin demo

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -39,6 +39,7 @@
         <module>springPreauthWebapp</module>
         <module>jaxrsSimpleWebapp</module>
         <module>jaxrsSpringSecurityWebapp</module>
+        <module>jaxrsCxfPluginWebapp</module>
     </modules>
 	
 	<profiles>
