--- a/pom.xml
+++ b/pom.xml
@@ -42,26 +42,28 @@
         <commons.logging.version>1.2</commons.logging.version>
         <cxf.version>3.0.7</cxf.version>
         <cxf.build-utils.version>3.0.0</cxf.build-utils.version>
-        <easymock.version>3.3</easymock.version>
+        <easymock.version>3.4</easymock.version>
         <ecj.version>4.4.2</ecj.version>
         <ehcache.version>2.8.5</ehcache.version>
+        <hibernate.version>5.2.2.Final</hibernate.version>
         <httpclient.version>4.3.5</httpclient.version>
-        <hsqldb.version>2.3.2</hsqldb.version>
+        <hsqldb.version>2.3.3</hsqldb.version>
         <htmlunit.version>2.15</htmlunit.version>
-        <javassist.version>3.16.1-GA</javassist.version>
+        <javassist.version>3.20.0-GA</javassist.version>
+        <javax.el.version>2.2</javax.el.version>
         <javax.validation.version>1.1.0.Final</javax.validation.version>
         <jericho.version>3.3</jericho.version>
         <jetty.version>8.1.12.v20130726</jetty.version>
         <!--<jetty.version>7.6.8.v20121106</jetty.version>-->
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <ognl.version>3.0.8</ognl.version>
+        <ognl.version>3.1.1</ognl.version>
         <openjpa.version>2.4.0</openjpa.version>
         <servlet.version>2.5</servlet.version>
-        <slf4j.version>1.7.12</slf4j.version>
+        <slf4j.version>1.7.13</slf4j.version>
         <spring.version>3.2.8.RELEASE</spring.version>
         <spring.security.version>3.1.7.RELEASE</spring.security.version>
-        <tomcat.version>7.0.64</tomcat.version>
+        <tomcat.version>7.0.65</tomcat.version>
         <wss4j.version>2.0.6</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
         <bval.version>0.5</bval.version>
