--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -187,7 +187,7 @@
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
-            <version>2.1_3</version>
+            <version>3.2.0</version>
         </dependency>
         <!-- 
         <dependency>
