--- a/services/oidc/src/main/webapp/WEB-INF/web.xml
+++ b/services/oidc/src/main/webapp/WEB-INF/web.xml
@@ -36,7 +36,7 @@
     </filter-mapping>
     <filter-mapping>
         <filter-name>FederationFilter</filter-name>
-        <url-pattern>/client/*</url-pattern>
+        <url-pattern>/clients/*</url-pattern>
     </filter-mapping>
 
     <context-param>
@@ -72,7 +72,7 @@
     <security-constraint>
         <web-resource-collection>
             <web-resource-name>Client Registration Protected Area</web-resource-name>
-            <url-pattern>/client/*</url-pattern>
+            <url-pattern>/clients/*</url-pattern>
         </web-resource-collection>
         <auth-constraint>
             <role-name>*</role-name>
