--- a/systests/pom.xml
+++ b/systests/pom.xml
@@ -32,6 +32,7 @@
 
    <modules>
       <module>tests</module>
+      <module>idp</module>
       <module>webapps</module>
       <module>jetty8</module>
       <module>jetty9</module>
