--- a/pom.xml
+++ b/pom.xml
@@ -703,6 +703,7 @@
                         <version>1.0-beta-3</version>
                     </dependency>
                 </dependencies>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
