--- a/systests/jetty9/pom.xml
+++ b/systests/jetty9/pom.xml
@@ -74,6 +74,7 @@
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
+            <classifier>tests</classifier>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
