--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -244,9 +244,14 @@
             <version>${javax.el.version}</version>
         </dependency>
         <dependency>
-        	<groupId>io.swagger</groupId>
-        	<artifactId>swagger-jaxrs</artifactId>
-        	<version>1.5.6</version>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-jaxrs</artifactId>
+            <version>1.5.6</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>${commons.validator.version}</version>
         </dependency>
     </dependencies>
     <build>
