--- a/services/idp/pom.xml
+++ b/services/idp/pom.xml
@@ -230,6 +230,7 @@
             <groupId>org.apache.bval</groupId>
             <artifactId>bval-jsr303</artifactId>
             <version>${bval.version}</version>
+        </dependency>
         <dependency>
             <groupId>commons-validator</groupId>
             <artifactId>commons-validator</artifactId>
