--- a/services/sts/src/main/resources/log4j.properties
+++ b/services/sts/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.logger.org.apache.cxf.sts=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.sts=false
 log4j.logger.org.apache.cxf.fediz=DEBUG, CONSOLE, LOGFILE
 log4j.additivity.org.apache.cxf.fediz=false
-log4j.logger.org.apache.cxf.sts.event.LoggerListener=DEBUG, AUDIT
+log4j.logger.org.apache.cxf.sts.event.map.MapEventLogger=DEBUG, AUDIT
 
 # CONSOLE is set to be a ConsoleAppender using a PatternLayout.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -23,8 +23,9 @@ log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d [%t] %-5p %c %x - %m%n
 
 # AUDIT is set to be a File appender using a PatternLayout.
-log4j.appender.AUDIT=org.apache.log4j.FileAppender
+log4j.appender.AUDIT=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.AUDIT.File=${catalina.base}/logs/audit.log
+log4j.appender.AUDIT.DatePattern='.'yyyy-MM-dd
 log4j.appender.AUDIT.Append=true
 log4j.appender.AUDIT.Threshold=DEBUG
 log4j.appender.AUDIT.layout=org.apache.cxf.sts.event.LoggerPatternLayoutLog4J
