--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -25,6 +25,10 @@ under the License.
     <description>Fediz IDP</description>
     <display-name>Fediz IDP</display-name>
 
+	<session-config>
+		<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
+
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
