[FEDIZ-152] Enforce Cookies only for user sessions tracking

--- a/services/idp/src/main/webapp/WEB-INF/web.xml
+++ b/services/idp/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,10 @@ under the License.
 
 	<description>Fediz IDP</description>
 	<display-name>Fediz IDP</display-name>
+	
+	<session-config>
+		<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
