--- a/pom.xml
+++ b/pom.xml
@@ -157,13 +157,13 @@
                 <enabled>false</enabled>
             </releases>
         </pluginRepository>
-        <repository>
+        <pluginRepository>
             <id>central</id>
             <url>https://repo1.maven.org/maven2</url>
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository>
+        </pluginRepository>
         <pluginRepository>
             <id>Liberty</id>
             <name>Liberty Repository</name>
