--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -23,7 +23,7 @@
    <parent>
        <groupId>org.apache.cxf.fediz</groupId>
        <artifactId>fediz</artifactId>
-       <version>1.2.2</version>
+       <version>1.2.2-SNAPSHOT</version>
    </parent>
    <groupId>org.apache.cxf.fediz</groupId>
    <artifactId>plugin</artifactId>
