--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,10 @@
 
     <properties>
         <apacheds.version>2.0.0-M21</apacheds.version>
+        <bcprov.version>1.54</bcprov.version>
         <commons.lang.version>3.4</commons.lang.version>
         <commons.logging.version>1.2</commons.logging.version>
+        <commons.io.version>2.4</commons.io.version>
         <commons.validator.version>1.5.0</commons.validator.version>
         <cxf.version>3.1.6-SNAPSHOT</cxf.version>
         <cxf.build-utils.version>3.1.0</cxf.build-utils.version>
@@ -64,8 +66,8 @@
         <slf4j.version>1.7.14</slf4j.version>
         <spring.version>4.1.7.RELEASE</spring.version>
         <spring.security.version>3.2.9.RELEASE</spring.security.version>
-        <tomcat7.version>7.0.65</tomcat7.version>
-        <tomcat8.version>8.0.30</tomcat8.version>
+        <tomcat7.version>7.0.68</tomcat7.version>
+        <tomcat8.version>8.0.32</tomcat8.version>
         <wss4j.version>2.1.4</wss4j.version>
         <xalan.version>2.7.2</xalan.version>
 
