--- a/systests/kerberos/pom.xml
+++ b/systests/kerberos/pom.xml
@@ -174,14 +174,14 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>${commons.io.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk15on</artifactId>
             <scope>test</scope>
-            <version>1.53</version>
+            <version>${bcprov.version}</version>
         </dependency>
 
     </dependencies>
