--- a/systests/federation/oidc/pom.xml
+++ b/systests/federation/oidc/pom.xml
@@ -229,6 +229,7 @@
                                     <directory>${basedir}/src/test/resources</directory>
                                     <includes>
                                         <include>entities-realma.xml</include>
+                                        <include>realmb.cert</include>
                                     </includes>
                                     <filtering>true</filtering>
                                 </resource>
