[FEDIZ-154] - Example 'simpleWebapp' needs proper configuration of the FederationEntryPoint in IDP realm-b. Thanks to Ingo Wolf for the patch.

--- a/services/idp/src/main/resources/realm.properties
+++ b/services/idp/src/main/resources/realm.properties
@@ -1,4 +1,5 @@
 realm.STS_URI=${realm.STS_URI}
+realm-uri=${realm-uri}
 realmA.port=${realmA.port}
 realmB.port=${realmB.port}
 db-load-config=${db-load-config}
