--- a/systests/federation/pom.xml
+++ b/systests/federation/pom.xml
@@ -32,6 +32,7 @@
 
     <modules>
         <module>samlIdpWebapp</module>
+        <module>oidcIdpWebapp</module>
         <module>samlsso</module>
         <module>wsfed</module>
     </modules>
