--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <commons.logging.version>1.2</commons.logging.version>
         <commons.io.version>2.4</commons.io.version>
         <commons.validator.version>1.5.0</commons.validator.version>
-        <cxf.version>3.1.6-SNAPSHOT</cxf.version>
+        <cxf.version>3.1.6</cxf.version>
         <cxf.build-utils.version>3.2.0</cxf.build-utils.version>
         <easymock.version>3.4</easymock.version>
         <ecj.version>4.4.2</ecj.version>
